--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "node": "^20"
   },
   "dependencies": {
-    "chrome-aws-lambda": "^6",
-    "express": "^4.18.1",
-    "puppeteer-core": "^6"
+    "chrome-aws-lambda": "*",
+    "express": "*",
+    "puppeteer-core": "*"
   },
   "devDependencies": {
-    "puppeteer": "^16.2.0"
+    "puppeteer": "*"
   }
 }
